--- a/manifest/dev/api_20240206.yml
+++ b/manifest/dev/api_20240206.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: api-20240206
-        image: "asia-northeast1-docker.pkg.dev/node-api-400701/node-api/go122-api"
+        image: "asia-northeast1-docker.pkg.dev/node-api-400701/node-api/go122-api:4779a2bb8f9cab6b1087d385f53c1f9ec3af9f47"
         ports:
         - containerPort: 8080
 
