--- a/manifest/dev/api_20240206.yml
+++ b/manifest/dev/api_20240206.yml
@@ -33,23 +33,23 @@ spec:
   - protocol: TCP
     port: 80
     targetPort: 8080
-  type: NodePort
+  type: ClusterIP
   
 ---
 
-# apiVersion: networking.k8s.io/v1
-# kind: Ingress
-# metadata:
-#   name: api-20240206
-# spec:
-#   rules:
-#   - host: localhost
-#     http:
-#       paths:
-#       - path: /
-#         pathType: Prefix
-#         backend:
-#           service:
-#             name: api-20240206
-#             port:
-#               number: 8080
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: api-20240206
+spec:
+  rules:
+  - host: localhost
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: api-20240206
+            port:
+              number: 80
