--- a/manifest/stg/api.yml
+++ b/manifest/stg/api.yml
@@ -25,7 +25,9 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: api-20240206
+  name: api-20240206-service
+  labels:
+    app: api-20240206-service
 spec:
   selector:
     app: api-20240206
@@ -34,21 +36,22 @@ spec:
     port: 80
     targetPort: 8080
   
-# ---
+---
 
-# apiVersion: networking.k8s.io/v1
-# kind: Ingress
-# metadata:
-#   name: api-20240206
-# spec:
-#   rules:
-#   - host: localhost
-#     http:
-#       paths:
-#       - path: /
-#         pathType: Prefix
-#         backend:
-#           service:
-#             name: api-20240206
-#             port:
-#               number: 8080
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: api-20240206
+spec:
+  ingressClassName: "nginx"
+  rules:
+  - host: localhost
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: api-20240206-service
+            port:
+              number: 8080
