fix: routing path

--- a/manifest/dev/api_20240206.yml
+++ b/manifest/dev/api_20240206.yml
@@ -49,7 +49,7 @@ spec:
   - host: localhost
     http:
       paths:
-      - path: /
+      - path: /dev
         pathType: Prefix
         backend:
           service:
