--- a/manifest/dev/api_20240206.yml
+++ b/manifest/dev/api_20240206.yml
@@ -35,24 +35,4 @@ spec:
   - protocol: TCP
     port: 80
     targetPort: 8080
-  type: LoadBalancer
-  
----
-
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: api-20240206
-spec:
-  ingressClassName: nginx
-  rules:
-  - host: localhost
-    http:
-      paths:
-      - path: /dev
-        pathType: Prefix
-        backend:
-          service:
-            name: api-20240206-service
-            port:
-              number: 80
+  type: NodePort
