--- a/manifest/stg/api.yml
+++ b/manifest/stg/api.yml
@@ -35,23 +35,4 @@ spec:
   - protocol: TCP
     port: 80
     targetPort: 8080
-  
----
-
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: api-20240206
-spec:
-  ingressClassName: "nginx"
-  rules:
-  - host: localhost
-    http:
-      paths:
-      - path: /stg
-        pathType: Prefix
-        backend:
-          service:
-            name: api-20240206-service
-            port:
-              number: 8080
+  type: NodePort
