--- a/manifest/stg/api.yml
+++ b/manifest/stg/api.yml
@@ -35,4 +35,23 @@ spec:
   - protocol: TCP
     port: 80
     targetPort: 8080
-  type: NodePort
+  type: ClusterIP
+
+---
+
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: api-20240206-ingress
+spec:
+  ingressClassName: "nginx"
+  rules:
+  - http:
+      paths:
+      - path: /stg
+        pathType: Prefix
+        backend:
+          service:
+            name: api-20240206-service
+            port:
+              number: 80
