--- a/manifests/stg/ingress.yml
+++ b/manifests/stg/ingress.yml
@@ -7,7 +7,7 @@ spec:
   rules:
     - http:
         paths:
-          - path: /dev
+          - path: /stg
             pathType: Prefix
             backend:
               service:
